--- a/OrderFood_SW/Views/Shared/_CustomerSidebar.cshtml
+++ b/OrderFood_SW/Views/Shared/_CustomerSidebar.cshtml
@@ -8,13 +8,17 @@
     </div>
 
     <nav>
-        <a href="#" class="nav-item">
+        <a href="~/CustomerOrder/CreateOrder" class="nav-item active">
             <i class="fas fa-th-large"></i>
             Menu
         </a>
-        <a href="#" class="nav-item active">
+        <a href="#" class="nav-item">
             <i class="fas fa-utensils"></i>
-            Table Services
+            Order Details
+        </a>
+        <a href="#" class="nav-item">
+            <i class="fas fa-history"></i>
+            Order History
         </a>
         <a href="#" class="nav-item">
             <i class="fas fa-calculator"></i>
