--- a/OrderFood_SW/Views/Shared/_MainSidebar.cshtml
+++ b/OrderFood_SW/Views/Shared/_MainSidebar.cshtml
@@ -45,7 +45,7 @@
             <li class="header">LABELS</li>
             <li><a href="#"><i class="fa fa-circle-o text-red"></i> <span>Important</span></a></li>
             <li><a href="#"><i class="fa fa-circle-o text-yellow"></i> <span>Warning</span></a></li>
-            <li><a href="~/CustomerOrder/CreateOrder"><i class="fa fa-circle-o text-aqua"></i> <span>Customer page review</span></a></li>
+            <li><a href="~/CustomerOrder/Index"><i class="fa fa-circle-o text-aqua"></i> <span>Customer page review</span></a></li>
         </ul>
     </section>
     <!-- /.sidebar -->
