--- a/OrderFood_SW/Views/Order/_CartPartial.cshtml
+++ b/OrderFood_SW/Views/Order/_CartPartial.cshtml
@@ -54,14 +54,8 @@
     else
     {
         <div>
-            <h3 class="text-center">Empty Cart</h3>
-            <p class="text-center">Add some dish to see more detail here.</p>
-            @if (true) // Replace with a condition to check if the user is logged in
-            {
-                <div class="text-center">
-                    <a href="/Order/Index" class="btn btn-primary">exit</a>
-                </div>
-            }
+            <h3 class="text-center" style="color:brown">Empty Cart</h3>
+            <p class="text-center" style="color: brown">Add some dish to see more detail here.</p>
         </div>
     }
 </div>
