--- a/OrderFood_SW/Views/Order/Detail.cshtml
+++ b/OrderFood_SW/Views/Order/Detail.cshtml
@@ -129,10 +129,21 @@
 
                 @if (!Model.OrderDetails.Any(x => x.DishStatus == 1))
                 {
-                    <form method="post" asp-action="CancelOrder" asp-controller="Order">
-                        <input type="hidden" name="orderId" value="@Model.Order.OrderId" />
-                        <button type="submit" class="btn btn-danger" style="width:100%">Cancel</button>
-                    </form>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <form method="post" asp-action="CancelOrder" asp-controller="Order">
+                                <input type="hidden" name="orderId" value="@Model.Order.OrderId" />
+                                <button type="submit" class="btn btn-danger" style="width:100%">Cancel</button>
+                            </form>
+                        </div>
+                        <div class="col-md-6">
+                            <form asp-action="AddDishToExistingOrder" method="post">
+                                <input type="hidden" name="orderId" value="@Model.Order.OrderId" />
+                                <input type="hidden" name="tableId" value="@Model.Order.TableId" />
+                                <button type="submit" class="btn btn-primary" style="width:100%">Add Dish</button>
+                            </form>
+                        </div>
+                    </div>
                 }
             }
             else
