Add toggle button to hide and show cart on PC.

--- a/OrderFood_SW/Views/CustomerOrder/_OrderCartPartial.cshtml
+++ b/OrderFood_SW/Views/CustomerOrder/_OrderCartPartial.cshtml
@@ -156,6 +156,7 @@
                 bindCartEventListeners();
                 bindCartToggle();
                 bindOutsideClickToCloseCart();
+                initOrderPanelToggle();
             }
         })
         .catch(error => {
