--- a/OrderFood_SW/Views/CustomerOrder/_ProductGridPartial.cshtml
+++ b/OrderFood_SW/Views/CustomerOrder/_ProductGridPartial.cshtml
@@ -1,7 +1,7 @@
 ﻿@model List<Dish>
 <!-- Products Grid -->
 <div>
-    <h3 class="text-center mb-4">Available Dishes</h3>
+    <h2 class="section-title">Available Dishes</h2>
 </div>
 <div class="products-grid">
     @foreach (var item in Model)
