--- a/OrderFood_SW/Views/Order/OrderHistory.cshtml
+++ b/OrderFood_SW/Views/Order/OrderHistory.cshtml
@@ -19,19 +19,39 @@
                         <th>Order Time</th>
                         <th>Total Amount</th>
                         <th>Note</th>
+                        <th>User ID</th>
                         <th style="width: 100px"></th>
                     </tr>
                 </thead>
                 <tbody>
                     @foreach (var item in Model.FoundOrders)
                     {
-                        if (item.OrderStatus == 2)
+                        if (item.OrderStatus == 2 || item.OrderStatus == -1)
                         {
                             <tr>
                                 <td>@item.TableId</td>
                                 <td>@item.OrderTime.ToString("dd/MM/yyyy HH:mm")</td>
                                 <td>@item.TotalAmount.ToString("N0")</td>
-                                <td>@item.note</td>
+                                <td>
+                                    @if (item.OrderStatus == -1)
+                                    {
+                                        <p style="color:brown">Canceled</p>
+                                    }
+                                    else
+                                    {
+                                        <p>Approved</p>
+                                    }
+                                </td>
+                                <td>
+                                    @if (item.UserId == 1)
+                                    {
+                                        <p>Guess</p>
+                                    }
+                                    else
+                                    {
+                                        @item.UserId
+                                    }
+                                </td>
                                 <td>
                                     <a href="~/Order/Detail/@item.OrderId">Show Details</a>
                                 </td>
