--- a/OrderFood_SW/Views/Shared/_MainSidebar.cshtml
+++ b/OrderFood_SW/Views/Shared/_MainSidebar.cshtml
@@ -46,6 +46,20 @@
             <li><a href="#"><i class="fa fa-circle-o text-red"></i> <span>Important</span></a></li>
             <li><a href="#"><i class="fa fa-circle-o text-yellow"></i> <span>Warning</span></a></li>
             <li><a href="~/CustomerOrder/Index"><i class="fa fa-circle-o text-aqua"></i> <span>Customer page review</span></a></li>
+
+            <li class="header">ACCOUNT NAVIGATION</li>
+            <li class="treeview">
+                <a href="#">
+                    <i class="fa fa-file-o"></i> <span>Managements</span>
+                    <span class="pull-right-container">
+                        <i class="fa fa-angle-left pull-right"></i>
+                    </span>
+                </a>
+                <ul class="treeview-menu">
+                    <li><a href="~/Users"><i class="fa fa-circle-o"></i> Account</a></li>
+                    <li><a href="~/Categories"><i class="fa fa-circle-o"></i> Setting</a></li>
+                </ul>
+            </li>
         </ul>
     </section>
     <!-- /.sidebar -->
