--- a/OrderFood_SW/Views/Shared/_CustomerSidebar.cshtml
+++ b/OrderFood_SW/Views/Shared/_CustomerSidebar.cshtml
@@ -30,7 +30,7 @@
         </a>
     </nav>
 
-    <a href="#" class="nav-item logout">
+    <a href="~/Account/Logout" class="nav-item logout">
         <i class="fas fa-sign-out-alt"></i>
         Logout
     </a>
