--- a/OrderFood_SW/Views/Shared/_MainSidebar.cshtml
+++ b/OrderFood_SW/Views/Shared/_MainSidebar.cshtml
@@ -7,7 +7,12 @@
                 <img src="~/themes/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
             </div>
             <div class="pull-left info">
-                <p>Nguyen Tuan</p>
+                <p>
+                    @if (!string.IsNullOrEmpty(ViewBag.FullName))
+                    {
+                        <span>@ViewBag.FullName</span>
+                    }
+                </p>
                 <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
             </div>
         </div>
