--- a/OrderFood_SW/Views/Users/Index.cshtml
+++ b/OrderFood_SW/Views/Users/Index.cshtml
@@ -28,7 +28,7 @@
                     <tr class="bg-primary">
                         <th>User ID</th>
                         <th>User Name</th>
-                        <th>Password</th>
+                        <th>Password Hash</th>
                         <th>Full Name</th>
                         <th>Role</th>
                         <th>Is Avtive ?</th>
