--- a/OrderFood_SW/Views/Shared/_Layout.cshtml
+++ b/OrderFood_SW/Views/Shared/_Layout.cshtml
@@ -1,4 +1,12 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.AspNetCore.Http
+@inject IHttpContextAccessor HttpContextAccessor
+
+@{
+    var fullName = HttpContextAccessor.HttpContext.Session.GetString("FullName");
+    var role = HttpContextAccessor.HttpContext.Session.GetString("Role");
+}
+
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8">
