--- a/OrderFood_SW/Views/Shared/_MainSidebar.cshtml
+++ b/OrderFood_SW/Views/Shared/_MainSidebar.cshtml
@@ -1,4 +1,11 @@
-﻿<aside class="main-sidebar" style="padding-top:0px">
+﻿@using Microsoft.AspNetCore.Http
+@inject IHttpContextAccessor HttpContextAccessor
+@{
+    var fullName = HttpContextAccessor.HttpContext.Session.GetString("FullName");
+    var role = HttpContextAccessor.HttpContext.Session.GetString("Role");
+}
+
+<aside class="main-sidebar" style="padding-top:0px">
     <!-- sidebar: style can be found in sidebar.less -->
     <section class="sidebar">
         <!-- Sidebar user panel -->
@@ -8,9 +15,9 @@
             </div>
             <div class="pull-left info">
                 <p>
-                    @if (!string.IsNullOrEmpty(ViewBag.FullName))
+                    @if (!string.IsNullOrEmpty(fullName))
                     {
-                        <span>@ViewBag.FullName</span>
+                        <span>@fullName</span>
                     }
                 </p>
                 <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
