View CustomerHistory by UserId

--- a/OrderFood_SW/Views/Shared/_MainHeader.cshtml
+++ b/OrderFood_SW/Views/Shared/_MainHeader.cshtml
@@ -75,7 +75,7 @@
                             </p>
                         </li>
                         <!-- Menu Footer-->
-                        <li class="user-footer">
+                        <li style="background-color:blanchedalmond" class="user-footer">
                             <div style="display:flex">
                                 <a style="width: 50%" href="#" class="btn btn-default btn-flat">Profile</a>
                                 <a style="width: 50%" href="~/Account/Logout" class="btn btn-default btn-flat">Sign out</a>
