--- a/OrderFood_SW/Views/Shared/_MainSidebar.cshtml
+++ b/OrderFood_SW/Views/Shared/_MainSidebar.cshtml
@@ -3,6 +3,7 @@
 @{
     var fullName = HttpContextAccessor.HttpContext.Session.GetString("FullName");
     var role = HttpContextAccessor.HttpContext.Session.GetString("Role");
+    var UserId = HttpContextAccessor.HttpContext.Session.GetString("UserId");
 }
 
 <aside class="main-sidebar" style="padding-top:0px">
