--- a/OrderFood_SW/Views/Shared/_CustomerSidebar.cshtml
+++ b/OrderFood_SW/Views/Shared/_CustomerSidebar.cshtml
@@ -16,7 +16,7 @@
             <i class="fas fa-utensils"></i>
             Order Details
         </a>
-        <a href="#" class="nav-item">
+        <a href="~/Customer/OrderHistory" class="nav-item">
             <i class="fas fa-history"></i>
             Order History
         </a>
