--- a/OrderFood_SW/Views/Account/Login.cshtml
+++ b/OrderFood_SW/Views/Account/Login.cshtml
@@ -9,7 +9,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BIGFOOD Restaurant</title>
-    <link rel="stylesheet" href="~/css/Login.css">
+    <link rel="stylesheet" href="~/css/user-login.css">
 </head>
 <body>
     <div class="nature-background">
@@ -111,7 +111,7 @@
         </div>
     </div>
 
-  @*   <script src="../../shared/js/form-utils.js"></script>
-    <script src="~/js/Login.js"></script> *@
+  @*   <script src="../../shared/js/form-utils.js"></script>*@
+    <script src="~/js/Login.js"></script>
 </body>
 </html>
